--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -94,7 +94,7 @@ publishing {
     }
     repositories {
         maven {
-            url System.getenv("MAVEN_URL")
+            url = System.getenv("MAVEN_URL")
         }
     }
 }
