--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,7 +1,7 @@
 public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity add(Ljava/util/Map;Lnet/minecraft/tags/TagKey;I)V #add
 public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity add(Ljava/util/Map;Lnet/minecraft/world/level/ItemLike;I)V #add
-public net.minecraft.world.inventory.MenuType.MenuSupplier #menuType
+public net.minecraft.world.inventory.MenuType$MenuSupplier #menuType
 public net.minecraft.world.inventory.MenuType <init>(Lnet/minecraft/world/inventory/MenuType$MenuSupplier;Lnet/minecraft/world/flag/FeatureFlagSet;)V #MenuType
 public net.minecraft.world.item.alchemny.PotionBrewing POTION_MIXES
 public net.minecraft.world.item.alchemny.PotionBrewing CONTAINER_MIXES
-public net.minecraft.world.item.alchemy.PotionBrewing.Mix
+public net.minecraft.world.item.alchemy.PotionBrewing$Mix
