--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ description=An API for Cryptic's mods!
 minecraft_version_range=[1.20.4, 1.21)
 
 # Fabric
-fabric_version=0.96.3+1.20.4
+fabric_version=0.96.4+1.20.4
 fabric_loader_version=0.15.7
 
 # Forge
@@ -22,7 +22,7 @@ forge_loader_version_range=[49,)
 forge_version_range=[49,)
 
 # NeoForge
-neoforge_version=20.4.163-beta
+neoforge_version=20.4.183
 neoforge_loader_version_range=[2,)
 
 # Gradle
