Add signing jars, remove Javadoc warnings

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -20,8 +20,6 @@ dependencies {
     compileOnly group:'org.spongepowered', name:'mixin', version:'0.8.5'
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
 }
-
-
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -34,4 +32,7 @@ publishing {
             url = System.getenv("MAVEN_URL")
         }
     }
+}
+signing {
+    sign publishing.publications.mavenJava
 }
