--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -136,3 +136,6 @@ sourceSets.each {
     it.output.resourcesDir = dir
     it.java.destinationDirectory = dir
 }
+signing {
+    sign publishing.publications.mavenJava
+}
