--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
-import java.text.SimpleDateFormat
-import java.util.*
-
 plugins {
     // Required for NeoGradle
     id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
+}
+allprojects {
+    apply plugin: 'signing'
 }
 
 subprojects {
@@ -14,6 +14,7 @@ subprojects {
     java.toolchain.languageVersion = JavaLanguageVersion.of(17)
     java.withSourcesJar()
     java.withJavadocJar()
+    javadoc.options.addStringOption("Xdoclint:none", "-quiet")
 
     jar {
         from(rootProject.file("LICENSE")) {
