--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ subprojects {
 
     processResources {
         def expandProps = [
-                "version": version,
+                "mod_version": mod_version,
                 "group": project.group, //Else we target the task's group.
                 "minecraft_version": minecraft_version,
                 "forge_version": forge_version,
