--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,9 +4,9 @@ plugins {
     id 'maven-publish'
     id "org.spongepowered.gradle.vanilla" version "0.2.1-SNAPSHOT"
 }
-
 base {
     archivesName = "Notebook-api-common-${minecraft_version}"
+    version = "${mod_version}"
 }
 
 minecraft {
