--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -74,8 +74,8 @@ minecraft {
 modrinth {
     token.set(System.getenv("MODRINTH_TOKEN"))
     projectId.set("notebook-api")
-    versionNumber.set("${project.version}")
-    versionName.set("Notebook API Forge ${project.version}")
+    versionNumber.set("${project.mod_version}")
+    versionName.set("[1.20.4] Notebook API Forge ${project.display_name}")
     versionType.set("release")
     uploadFile.set(tasks.jar)
     gameVersions.addAll("1.20.4")
@@ -88,7 +88,7 @@ task curseforge(type: TaskPublishCurseForge) {
 
     def mainFile = upload(971909, jar)
     mainFile.releaseType = 'release'
-    mainFile.displayName = "Notebook API Forge ${rootProject.version}"
+    mainFile.displayName = "[1.20.4] Notebook API Forge ${display_name}"
     mainFile.addGameVersion("1.20.4")
     mainFile.addJavaVersion("Java 17")
     mainFile.changelog = rootProject.file("CHANGELOG.md").text
