--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -39,7 +39,7 @@ modrinth {
     token.set(System.getenv("MODRINTH_TOKEN"))
     projectId.set("notebook-api")
     versionNumber.set("${project.version}")
-    versionName.set("Notebook API NeoForge ${project.version}")
+    versionName.set("[1.20.4] Notebook API NeoForge ${project.mod_version}")
     versionType.set("release")
     uploadFile.set(tasks.jar)
     gameVersions.addAll("1.20.4")
@@ -52,7 +52,7 @@ task curseforge(type: TaskPublishCurseForge) {
     apiToken = System.getenv("CURSEFORGE_TOKEN")
     def mainFile = upload(971909, jar)
     mainFile.releaseType = "release"
-    mainFile.displayName = "Notebook API NeoForge ${rootProject.version}"
+    mainFile.displayName = "[1.20.4] Notebook API NeoForge ${display_name}"
     mainFile.addGameVersion("1.20.4")
     mainFile.addModLoader("NeoForge")
     mainFile.addJavaVersion("Java 17")
