--- a/neoforge/src/main/resources/META-INF/mods.toml
+++ b/neoforge/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ issueTrackerURL="https://github.com/BookkeepersMC/Notebook/issues"
 
 [[mods]]
 modId = "${mod_id}"
-version = "${version}"
+version = "${mod_version}"
 displayName = "${mod_name}"
 displayURL="https://curseforge.com/minecraft/mc-mods/notebook-api"
 logoFile="${mod_id}.png"
