--- a/forge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/forge/src/main/resources/META-INF/accesstransformer.cfg
@@ -4,6 +4,7 @@ public net.minecraft.world.inventory.MenuType$MenuSupplier #menuType
 public net.minecraft.world.inventory.MenuType <init>(Lnet/minecraft/world/inventory/MenuType$MenuSupplier;Lnet/minecraft/world/flag/FeatureFlagSet;)V #MenuType
 public net.minecraft.world.item.alchemy.PotionBrewing f_43494_ #POTION_MIXES
 public net.minecraft.world.item.alchemy.PotionBrewing f_43495_ #CONTAINER_MIXES
+public-f net.minecraft.data.models.BlockModelGenerators f_176083_ # SHAPE_CONSUMERS
 public net.minecraft.world.item.alchemy.PotionBrewing$Mix
 
 public net.minecraft.world.level.biome.Biome$ClimateSettings
