--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -74,7 +74,7 @@ minecraft {
 modrinth {
     token.set(System.getenv("MODRINTH_TOKEN"))
     projectId.set("notebook-api")
-    versionNumber.set("${project.mod_version}")
+    versionNumber.set("forge-${project.mod_version}")
     versionName.set("[1.20.4] Notebook API Forge ${project.display_name}")
     versionType.set("release")
     uploadFile.set(tasks.jar)
