--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ description=An API for Cryptic's mods!
 minecraft_version_range=[1.20.4, 1.21)
 
 # Fabric
-fabric_version=0.96.4+1.20.4
+fabric_version=0.96.11+1.20.4
 fabric_loader_version=0.15.7
 
 # Forge
@@ -29,3 +29,8 @@ neoforge_loader_version_range=[2,)
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+# Kotlin
+kotlin_version=1.9.23
+coroutines_version=1.8.0
+serialization_version=1.6.3
